test/negative/203_if_cond_nonbool.fx
// expect: bool
val a = if 3 {1} else {2}
println(a)
